Add full posts for Java, JavaScript, and Python
- Java: OOP pillars (encapsulation, inheritance, polymorphism, abstraction),
  abstract classes vs interfaces, JVM internals (class loading, JIT compilation,
  memory layout), and generational garbage collection (G1, ZGC)
- JavaScript: event loop architecture, callback hell, Promises and combinators,
  async/await pitfalls, closures, prototype chain, and ES6+ features
- Python: GIL explained (why it exists, what it blocks, when it's released),
  reference counting + cyclic GC, multiprocessing/asyncio/concurrent.futures
  workarounds, and key language features

Both English and Korean versions written for each language.

https://claude.ai/code/session_01Q46GLiWtkv7WVDdwN9dkD3